--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
-*
+@import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400..700&display=swap');
+*{font-family: "AR One Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:"ARRR" 10;}
+
+
+.full_width_video{width: 100vw;}
