--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400..700&display=swap');
-html{font-size: 1.15rem;}
-h2{font-size: 1.4rem;}
+html{font-size: 1.15rem; background-color: rgb(251, 251, 251);}
+h2{font-size: 1.3rem;}
 *{font-family: "AR One Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  font-variation-settings:"ARRR" 10;}
+  font-variation-settings:"ARRR" 10;
+  box-sizing:border-box;}
 
 
-#trigram{font-size: 45px;}
-#logo{width: 140px;}
-.header_items{justify-content: space-between;}
+#trigram{font-size: 50px;}
+#logo{width: 170px; margin: 0 auto;}
+
 .main_navigation{display: none;}
 .main_navigation *{margin: 10px;}
 .navigation_items{display: flex; flex-direction: column;}
 
-.full_width_video{width: 100vw; height: 300px; border: 2px solid black;}
-.full_width_image{width: 100vw;}
+.full_width_video{width: 100%; height: 300px; border: 2px solid black;}
+.full_width_image{width: 100%;}
 .margin10{margin: 10px;}
+.padding30{padding: 30px;}
+
+
 .center_text{text-align: center;}
 .flex_row{display: flex;}
-@media (min-width: 767px){ 
+.space_around{justify-content: space-around;}
+
+.black_background{background-color: rgb(32, 44, 101);}
+.white_font{color: white;}
+
+@media only screen and (min-width: 767px) {
   #trigram{display: none;}
 
   .header_items{justify-content: center;}
+  .full_width_image{width: 80%; display:block; margin:auto;}
+  .main_navigation{display: block !important;}
+  .navigation_items{display:flex; flex-direction: row; justify-content: space-evenly; background-color: rgba(37, 51, 115, 0.164);}}
 
-  .main_navigation{display: block;}
-  .navigation_items{flex-direction: row; justify-content: space-evenly;}
+  @media only screen and (min-width: 1200px) {
+  .hero{display: flex; align-items: center;}
+  .hero img{flex: 1;
+            width: 50vw;
+            display: block;
+            object-fit: cover;}
+  .hero > div{flex: 1;}}
 
-
-
-}
+  footer{height: 100px; background-color: black;}
