--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400..700&display=swap');
-html{font-size: 1.15rem; background-color: rgb(251, 251, 251);}
-h2{font-size: 1.3rem;}
+html{font-size: 1.12rem; background-color: rgb(251, 251, 251);}
+h2{font-size: 1.22rem;}
 *{font-family: "AR One Sans", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -10,14 +10,16 @@ h2{font-size: 1.3rem;}
 
 
 #trigram{font-size: 50px;}
-#logo{width: 170px; margin: 0 auto;}
+#logo{width: 175px; margin: 5px auto;}
 
 .main_navigation{display: none;}
 .main_navigation *{margin: 10px;}
 .navigation_items{display: flex; flex-direction: column;}
+.hero{border-radius: 20px;}
+
 
 .full_width_video{width: 100%; height: 300px; border: 2px solid black;}
-.full_width_image{width: 100%;}
+.full_width_image{width: 100%; border-radius: 20px;}
 .margin10{margin: 10px;}
 .padding30{padding: 30px;}
 
@@ -26,8 +28,7 @@ h2{font-size: 1.3rem;}
 .flex_row{display: flex;}
 .space_around{justify-content: space-around;}
 
-.black_background{background-color: rgb(32, 44, 101);}
-.white_font{color: white;}
+.black_background{background-color: black;}
 
 @media only screen and (min-width: 767px) {
   #trigram{display: none;}
