--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400..700&display=swap');
-html{font-size: 1.12rem; background-color: rgb(251, 251, 251);}
+html{font-size: 1.12rem;}
 h2{font-size: 1.22rem;}
 *{font-family: "AR One Sans", sans-serif;
   font-optical-sizing: auto;
@@ -15,7 +15,7 @@ h2{font-size: 1.22rem;}
 .main_navigation{display: none;}
 .main_navigation *{margin: 10px;}
 .navigation_items{display: flex; flex-direction: column;}
-.hero{border-radius: 20px;}
+.hero{border-radius: 20px; background-color: rgb(200, 238, 225);}
 
 
 .full_width_video{width: 100%; height: 300px; border: 2px solid black;}
@@ -36,7 +36,7 @@ h2{font-size: 1.22rem;}
   .header_items{justify-content: center;}
   .full_width_image{width: 80%; display:block; margin:auto;}
   .main_navigation{display: block !important;}
-  .navigation_items{display:flex; flex-direction: row; justify-content: space-evenly; background-color: rgba(37, 51, 115, 0.164);}}
+  .navigation_items{display:flex; flex-direction: row; justify-content: space-evenly;}}
 
   @media only screen and (min-width: 1200px) {
   .hero{display: flex; align-items: center;}
