--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=AR+One+Sans:wght@400..700&display=swap');
-html{font-size: 1.13rem;}
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
+html{font-size: 1.12rem;}
 h2{font-size: 1.22rem;}
-*{font-family: "AR One Sans", sans-serif;
+*{font-family: "AR One Sans", sans-serif;@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap');
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
   font-variation-settings:"ARRR" 10;
   box-sizing:border-box;}
-
+a{cursor: pointer; text-decoration: none; color: black;}
 
 #trigram{font-size: 50px;}
 #logo{width: 175px;}
@@ -15,22 +17,33 @@ h2{font-size: 1.22rem;}
 .main_navigation{display: none;}
 .main_navigation *{margin: 10px;}
 .navigation_items{display: flex; flex-direction: column;}
-.hero{border-radius: 20px; background-color: #eaf4ff;}
+.hero{border-radius: 20px; background-color: #70918323;}
 
 
 .full_width_video{width: 100%; height: 300px; border: 2px solid black;}
 .full_width_image{width: 100%; border-radius: 20px;}
 .margin10{margin: 10px;}
+.padding20{padding: 20px;}
 .padding30{padding: 30px;}
 
-
+.bigger_font{font-size: larger;}
+.smaller_font{font-size:smaller;}
 .center_text{text-align: center;}
+
 .flex_row{display: flex;}
+.flex_column{display: flex; flex-direction: column;}
+.flex_wrap{flex-wrap: wrap;}
 .space_around{justify-content: space-around;}
+.center_horizontally{justify-content: center;}
 .center_vertically{align-items: center;}
+
+.caveat_font{font-family: "Caveat", cursive; font-optical-sizing: auto; font-weight: 400; font-style: normal;}
 
 .black_background{background-color: black;}
 .white_font{color: white;}
+.blue_font{color: rgb(255, 49, 49);}
+.bold{font-weight: 600;}
+.italic{font-style: italic;}
 
 @media only screen and (min-width: 767px) {
   #trigram{display: none;}
@@ -39,7 +52,7 @@ h2{font-size: 1.22rem;}
   .full_width_image{width: 80%; display:block; margin:auto;}
   .main_navigation{display: block !important;}
   .navigation_items{display:flex; flex-direction: row; justify-content: space-evenly;}}
-
+  
   @media only screen and (min-width: 1200px) {
   .hero{display: flex; align-items: center;}
   .hero img{flex: 1;
@@ -48,5 +61,6 @@ h2{font-size: 1.22rem;}
             object-fit: cover;}
   .hero > div{flex: 1;}
   .full_width_video{height: 500px;}}
-  footer{height: 100px; background-color: black;}
-  footer a{cursor: default;}
+
+  footer{height: 100px; background-color: #000000;}
+  footer a{font-family: "Anonymous Pro", monospace; font-weight: 400; font-style: normal;}
