--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@ a{cursor: pointer; text-decoration: none; color: black;}
 .main_navigation *{margin: 10px;}
 .navigation_items{display: flex; flex-direction: column;}
 .hundred_to_fifty_layout{display:flex; flex-direction: column;}
+.gallery {display: flex;flex-direction: column; gap: 30px; justify-content: center; overflow: visible;}
+.gallery img {width: 90%; object-fit: cover; border-radius: 20px; transition: box-shadow 0.2s ease;}
+.gallery img:hover{box-shadow: 10px 5px 5px #a2e3f380;}
+
+.zoom{width: 80vw !important; border: 3px solid #ffffff80;}
 
 .full_width_video{width: 100%; height: 400px;}
 .full_width_iFrame{width: 100%; height: 300px;}
@@ -42,7 +47,7 @@ a{cursor: pointer; text-decoration: none; color: black;}
 
 .caveat_font{font-family: "Caveat", cursive; font-optical-sizing: auto; font-weight: 400; font-style: normal;}
 
-.main_background{background-color: #5d560c32;}
+.main_background{background-color: #56a6b931;}
 .black_background{background-color: black;}
 .white_font{color: white;}
 .blue_font{color: rgb(255, 49, 49);}
@@ -69,6 +74,9 @@ a{cursor: pointer; text-decoration: none; color: black;}
   .hundred_to_fifty_layout{flex-direction: row; flex-wrap: nowrap; }
   .hundred_to_fifty_layout iframe{flex: 0 0 40%;}
   .hundred_to_fifty_layout p{margin: 0 auto; display: block;}
+
+  .gallery {flex-direction: row; flex-wrap: wrap;}
+  .gallery img{width: 42%;}
 }
 
   
@@ -77,7 +85,7 @@ a{cursor: pointer; text-decoration: none; color: black;}
 
   .hero{display: flex; align-items: center;}
   .hero img{flex: 1;
-            width: 50vw;
+            width: 50%;
             display: block;
             object-fit: cover;}
   .hero > div{flex: 1;}
@@ -85,6 +93,9 @@ a{cursor: pointer; text-decoration: none; color: black;}
 
 
   .landing_subpage p{width:1000px;}
+
+  .zoom{width: 50vw !important;}
+
 
 }
 
